web/css/style.css
html,
body {
    height: 100%;
}

body {
    background-color: #f5f5f5;
}

.form-center {
    display:table;
    height:100%;
    max-width:320px;
}

form#formLogin, form#formRegister {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    max-width: 320px;
}

img#logo {
    filter: drop-shadow(4px 2px 15px rgba(0, 0, 0, .2));
    width: 100px;
}

h1#appName {
    padding: 20px;
    text-shadow: 2px 1px 15px rgba(0, 0, 0, .2);
}

.feather {
    width: 16px;
    height: 16px;
    vertical-align: text-bottom;
}

/*
 * Sidebar
 */

.sidebar {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    z-index: 100; /* Behind the navbar */
    padding: 60px 0 0; /* Height of navbar */
    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
    font-size: .875rem;
    background-color: #e9e9e9;
}

.sidebar-sticky {
    position: relative;
    top: 0;
    height: calc(100vh - 48px);
    padding-top: .5rem;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
}

@supports ((position: -webkit-sticky) or (position: sticky)) {
    .sidebar-sticky {
        position: -webkit-sticky;
        position: sticky;
    }
}

.sidebar .nav-link {
    font-weight: 500;
    color: #333;
}

.sidebar .nav-link .feather {
    margin-right: 4px;
    color: #999;
}

.sidebar .nav-link.active {
    color: #007bff;
}

.sidebar .nav-link:hover .feather,
.sidebar .nav-link.active .feather {
    color: inherit;
}

.sidebar-heading {
    font-size: .75rem;
    text-transform: uppercase;
}

/*
 * Content
 */

[role="main"] {
    padding-top: 60px; /* Space for fixed navbar */
}

/*
 * Navbar
 */

.navbar-brand {
    font-size: 1rem;
}

nav.navbar {
    margin-bottom: 60px;
}

a.navbar-brand img {
    margin-right: 5px;
}

